Add packages init

--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ltatarev/eslint-config-react-native",
-  "version": "1.0.0",
-  "description": "Eslint config for React Native projects",
+  "name": "@ltatarev/eslint-config-react",
+  "version": "1.0.0-beta.0",
+  "description": "Eslint config for React projects",
   "main": "index.js",
   "dependencies": {
     "eslint-config-airbnb": "19.0.4",
@@ -11,25 +11,23 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.3.0",
-    "eslint-plugin-react-native": "4.0.0",
     "eslint-plugin-simple-import-sort": "8.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "prettier": "2.7.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ltatarev/eslint-config-react-native.git"
+    "url": "git+https://github.com/ltatarev/eslint-config.git"
   },
   "keywords": [
     "eslint",
     "eslint-config",
-    "react",
-    "react-native"
+    "react"
   ],
   "author": "ltatarev",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ltatarev/eslint-config-react-native/issues"
+    "url": "https://github.com/ltatarev/eslint-config/issues"
   },
-  "homepage": "https://github.com/ltatarev/eslint-config-react-native#readme"
+  "homepage": "https://github.com/ltatarev/eslint-config#readme"
 }
