--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ltatarev/eslint-config-react",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "Eslint config for React projects",
   "main": "index.js",
   "dependencies": {
