--- a/packages/eslint-config-react-native/package.json
+++ b/packages/eslint-config-react-native/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@ltatarev/eslint-config-react-native",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0",
   "description": "Eslint config for React Native projects",
   "main": "index.js",
   "dependencies": {
+    "@ltatarev/eslint-config-react": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
     "eslint-config-airbnb": "19.0.4",
     "eslint": "8.54.0",
