--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@ltatarev/eslint-config-react",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0",
   "description": "Eslint config for React projects",
   "main": "index.js",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
     "eslint-config-airbnb": "19.0.4",
     "eslint": "8.54.0",
