--- a/.github/workflows/release-react-package.yml
+++ b/.github/workflows/release-react-package.yml
@@ -3,6 +3,7 @@ name: Release React package
 on:
   release:
     types: [created]
+  workflow_dispatch:
 
 defaults:
   run:
@@ -30,7 +31,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
+      - run: npm i
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
